--- a/Hotel/nbproject/project.properties
+++ b/Hotel/nbproject/project.properties
@@ -1,6 +1,6 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
+annotation.processing.processor.options=-Aeclipselink.canonicalmodel.use_static_factory=false
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
@@ -36,11 +36,10 @@ file.reference.iText-2.1.7.js2.jar=lib\\iText-2.1.7.js2.jar
 file.reference.jasperreports-5.6.0.jar=lib\\jasperreports-5.6.0.jar
 file.reference.javax.servlet.jar=lib\\javax.servlet.jar
 file.reference.looksdemo-2.3.1.jar=lib\\looksdemo-2.3.1.jar
-file.reference.postgresql-9.4.1209.jar=lib\\postgresql-9.4.1209.jar
+file.reference.postgresql-9.4.1209.jar=C:\\Program Files (x86)\\NetBeans 8.2\\ide\\modules\\ext\\postgresql-9.4.1209.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.postgresql-9.4.1209.jar}:\
     ${file.reference.looksdemo-2.3.1.jar}:\
     ${libs.absolutelayout.classpath}:\
     ${file.reference.commons-beanutils-1.8.2.jar}:\
@@ -50,13 +49,17 @@ javac.classpath=\
     ${file.reference.groovy-all-2.0.1.jar}:\
     ${file.reference.iText-2.1.7.js2.jar}:\
     ${file.reference.jasperreports-5.6.0.jar}:\
-    ${file.reference.javax.servlet.jar}
+    ${file.reference.javax.servlet.jar}:\
+    ${file.reference.postgresql-9.4.1209.jar}:\
+    ${libs.hibernate4-support.classpath}:\
+    ${libs.jpa2-persistence.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
 javac.external.vm=true
 javac.processorpath=\
-    ${javac.classpath}
+    ${javac.classpath}:\
+    ${libs.hibernate4-persistencemodelgen.classpath}
 javac.source=1.8
 javac.target=1.8
 javac.test.classpath=\
