#13 - Adicionado insert, criado metodo de validacao e pequenos ajustes.

--- a/Hotel/db.properties
+++ b/Hotel/db.properties
@@ -1,4 +1,4 @@
 db.driver=org.postgresql.Driver
-db.url=jdbc:postgresql://localhost:5432/videostore
+db.url=jdbc:postgresql://localhost:5432/hotel
 db.user=postgres
 db.senha=
