--- a/Hotel/nbproject/project.properties
+++ b/Hotel/nbproject/project.properties
@@ -40,6 +40,7 @@ file.reference.jasperreports-5.6.0.jar=lib\\jasperreports-5.6.0.jar
 file.reference.javax.servlet.jar=lib\\javax.servlet.jar
 file.reference.looksdemo-2.3.1.jar=lib\\looksdemo-2.3.1.jar
 file.reference.postgresql-9.4.1209.jar=C:\\Program Files (x86)\\NetBeans 8.2\\ide\\modules\\ext\\postgresql-9.4.1209.jar
+file.reference.postgresql-9.4.1209.jar-1=lib\\postgresql-9.4.1209.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -55,7 +56,8 @@ javac.classpath=\
     ${file.reference.javax.servlet.jar}:\
     ${file.reference.postgresql-9.4.1209.jar}:\
     ${libs.hibernate4-support.classpath}:\
-    ${libs.jpa2-persistence.classpath}
+    ${libs.jpa2-persistence.classpath}:\
+    ${file.reference.postgresql-9.4.1209.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
