#8 Início do cadastro de quartos

--- a/Hotel/nbproject/project.properties
+++ b/Hotel/nbproject/project.properties
@@ -57,7 +57,8 @@ javac.classpath=\
     ${file.reference.postgresql-9.4.1209.jar}:\
     ${libs.hibernate4-support.classpath}:\
     ${libs.jpa2-persistence.classpath}:\
-    ${file.reference.postgresql-9.4.1209.jar-1}
+    ${file.reference.postgresql-9.4.1209.jar-1}:\
+    ${reference.VideoStore.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -88,6 +89,7 @@ manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 platform.active=default_platform
+reference.VideoStore.jar=${project.VideoStore}/dist/VideoStore.jar
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
