--- a/Hotel/nbproject/project.properties
+++ b/Hotel/nbproject/project.properties
@@ -38,6 +38,7 @@ file.reference.groovy-all-2.0.1.jar=lib\\groovy-all-2.0.1.jar
 file.reference.iText-2.1.7.js2.jar=lib\\iText-2.1.7.js2.jar
 file.reference.jasperreports-5.6.0.jar=lib\\jasperreports-5.6.0.jar
 file.reference.javax.servlet.jar=lib\\javax.servlet.jar
+file.reference.log4j-1.2.17.jar=lib\\log4j-1.2.17.jar
 file.reference.looksdemo-2.3.1.jar=lib\\looksdemo-2.3.1.jar
 file.reference.postgresql-9.4.1209.jar-1=lib\\postgresql-9.4.1209.jar
 includes=**
@@ -56,8 +57,8 @@ javac.classpath=\
     ${libs.hibernate4-support.classpath}:\
     ${libs.jpa2-persistence.classpath}:\
     ${file.reference.postgresql-9.4.1209.jar-1}:\
-    ${reference.VideoStore.jar}:\
-    ${libs.KGradientPanel.classpath}
+    ${libs.KGradientPanel.classpath}:\
+    ${file.reference.log4j-1.2.17.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -88,7 +89,6 @@ manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 platform.active=default_platform
-reference.VideoStore.jar=${project.VideoStore}/dist/VideoStore.jar
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
