--- a/Hotel/nbproject/project.properties
+++ b/Hotel/nbproject/project.properties
@@ -34,6 +34,7 @@ file.reference.commons-beanutils-1.8.2.jar=lib\\commons-beanutils-1.8.2.jar
 file.reference.commons-collections-3.2.1.jar=lib\\commons-collections-3.2.1.jar
 file.reference.commons-digester-2.1.jar=lib\\commons-digester-2.1.jar
 file.reference.commons-logging-1.1.jar=lib\\commons-logging-1.1.jar
+file.reference.DateChooser.jar=lib\\DateChooser.jar
 file.reference.groovy-all-2.0.1.jar=lib\\groovy-all-2.0.1.jar
 file.reference.iText-2.1.7.js2.jar=lib\\iText-2.1.7.js2.jar
 file.reference.jasperreports-5.6.0.jar=lib\\jasperreports-5.6.0.jar
@@ -57,7 +58,9 @@ javac.classpath=\
     ${libs.hibernate4-support.classpath}:\
     ${libs.jpa2-persistence.classpath}:\
     ${file.reference.postgresql-9.4.1209.jar-1}:\
-    ${file.reference.log4j-1.2.17.jar}
+    ${file.reference.log4j-1.2.17.jar}:\
+    ${file.reference.DateChooser.jar}:\
+    ${libs.JCalendar_1.4.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
