--- a/Hotel/nbproject/project.properties
+++ b/Hotel/nbproject/project.properties
@@ -59,8 +59,7 @@ javac.classpath=\
     ${libs.jpa2-persistence.classpath}:\
     ${file.reference.postgresql-9.4.1209.jar-1}:\
     ${file.reference.log4j-1.2.17.jar}:\
-    ${file.reference.DateChooser.jar}:\
-    ${libs.JCalendar_1.4.classpath}
+    ${file.reference.DateChooser.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
