--- a/Hotel/nbproject/project.properties
+++ b/Hotel/nbproject/project.properties
@@ -20,8 +20,12 @@ build.test.results.dir=${build.dir}/test/results
 #debug.transport=dt_socket
 debug.classpath=\
     ${run.classpath}
+debug.modulepath=\
+    ${run.modulepath}
 debug.test.classpath=\
     ${run.test.classpath}
+debug.test.modulepath=\
+    ${run.test.modulepath}
 # Os arquivos em build.classes.dir que devem ser exclu\u00eddos do jar de distribui\u00e7\u00e3o
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
@@ -36,12 +40,24 @@ file.reference.commons-digester-2.1.jar=lib\\commons-digester-2.1.jar
 file.reference.commons-logging-1.1.jar=lib\\commons-logging-1.1.jar
 file.reference.DateChooser.jar=lib\\DateChooser.jar
 file.reference.groovy-all-2.0.1.jar=lib\\groovy-all-2.0.1.jar
+file.reference.hamcrest-core-1.3.jar=lib\\hamcrest-core-1.3.jar
 file.reference.iText-2.1.7.js2.jar=lib\\iText-2.1.7.js2.jar
 file.reference.jasperreports-5.6.0.jar=lib\\jasperreports-5.6.0.jar
 file.reference.javax.servlet.jar=lib\\javax.servlet.jar
+file.reference.jcommon-1.0.23.jar=lib\\jcommon-1.0.23.jar
+file.reference.jfreechart-1.0.19-experimental.jar=lib\\jfreechart-1.0.19-experimental.jar
+file.reference.jfreechart-1.0.19-swt.jar=lib\\jfreechart-1.0.19-swt.jar
+file.reference.jfreechart-1.0.19.jar=lib\\jfreechart-1.0.19.jar
+file.reference.jfreechart-1.0.19.zip=lib\\jfreechart-1.0.19.zip
+file.reference.jfreesvg-2.0.jar=lib\\jfreesvg-2.0.jar
+file.reference.junit-4.11.jar=lib\\junit-4.11.jar
 file.reference.log4j-1.2.17.jar=lib\\log4j-1.2.17.jar
 file.reference.looksdemo-2.3.1.jar=lib\\looksdemo-2.3.1.jar
+file.reference.orsoncharts-1.4-eval-nofx.jar=lib\\orsoncharts-1.4-eval-nofx.jar
+file.reference.orsonpdf-1.6-eval.jar=lib\\orsonpdf-1.6-eval.jar
 file.reference.postgresql-9.4.1209.jar-1=lib\\postgresql-9.4.1209.jar
+file.reference.servlet.jar=lib\\servlet.jar
+file.reference.swtgraphics2d.jar=lib\\swtgraphics2d.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -59,11 +75,25 @@ javac.classpath=\
     ${libs.jpa2-persistence.classpath}:\
     ${file.reference.postgresql-9.4.1209.jar-1}:\
     ${file.reference.log4j-1.2.17.jar}:\
-    ${file.reference.DateChooser.jar}
+    ${file.reference.DateChooser.jar}:\
+    ${file.reference.jfreechart-1.0.19.jar}:\
+    ${file.reference.hamcrest-core-1.3.jar}:\
+    ${file.reference.jcommon-1.0.23.jar}:\
+    ${file.reference.jfreechart-1.0.19-experimental.jar}:\
+    ${file.reference.jfreechart-1.0.19-swt.jar}:\
+    ${file.reference.jfreesvg-2.0.jar}:\
+    ${file.reference.junit-4.11.jar}:\
+    ${file.reference.orsoncharts-1.4-eval-nofx.jar}:\
+    ${file.reference.orsonpdf-1.6-eval.jar}:\
+    ${file.reference.servlet.jar}:\
+    ${file.reference.swtgraphics2d.jar}:\
+    ${file.reference.jfreechart-1.0.19.zip}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
 javac.external.vm=true
+javac.modulepath=
+javac.processormodulepath=
 javac.processorpath=\
     ${javac.classpath}:\
     ${libs.hibernate4-persistencemodelgen.classpath}
@@ -72,6 +102,8 @@ javac.target=1.8
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
+javac.test.modulepath=\
+    ${javac.modulepath}
 javac.test.processorpath=\
     ${javac.test.classpath}
 javadoc.additionalparam=
@@ -97,9 +129,13 @@ run.classpath=\
 # You may also define separate properties like run-sys-prop.name=value instead of -Dname=value.
 # To set system properties for unit tests define test-sys-prop.name=value:
 run.jvmargs=
+run.modulepath=\
+    ${javac.modulepath}
 run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
+run.test.modulepath=\
+    ${javac.test.modulepath}
 source.encoding=UTF-8
 src.dir=src
 test.src.dir=test
