--- a/Hotel/nbproject/project.properties
+++ b/Hotel/nbproject/project.properties
@@ -87,7 +87,8 @@ javac.classpath=\
     ${file.reference.orsonpdf-1.6-eval.jar}:\
     ${file.reference.servlet.jar}:\
     ${file.reference.swtgraphics2d.jar}:\
-    ${file.reference.jfreechart-1.0.19.zip}
+    ${file.reference.jfreechart-1.0.19.zip}:\
+    ${libs.JCalendar_1.4.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
