--- a/Hotel/nbproject/project.properties
+++ b/Hotel/nbproject/project.properties
@@ -44,6 +44,7 @@ file.reference.hamcrest-core-1.3.jar=lib\\hamcrest-core-1.3.jar
 file.reference.iText-2.1.7.js2.jar=lib\\iText-2.1.7.js2.jar
 file.reference.jasperreports-5.6.0.jar=lib\\jasperreports-5.6.0.jar
 file.reference.javax.servlet.jar=lib\\javax.servlet.jar
+file.reference.jcalendar-1.4.jar=lib\\jcalendar-1.4.jar
 file.reference.jcommon-1.0.23.jar=lib\\jcommon-1.0.23.jar
 file.reference.jfreechart-1.0.19-experimental.jar=lib\\jfreechart-1.0.19-experimental.jar
 file.reference.jfreechart-1.0.19-swt.jar=lib\\jfreechart-1.0.19-swt.jar
@@ -88,7 +89,8 @@ javac.classpath=\
     ${file.reference.servlet.jar}:\
     ${file.reference.swtgraphics2d.jar}:\
     ${file.reference.jfreechart-1.0.19.zip}:\
-    ${libs.JCalendar_1.4.classpath}
+    ${libs.JCalendar_1.4.classpath}:\
+    ${file.reference.jcalendar-1.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
