--- a/Hotel/nbproject/project.properties
+++ b/Hotel/nbproject/project.properties
@@ -49,7 +49,6 @@ file.reference.jcommon-1.0.23.jar=lib\\jcommon-1.0.23.jar
 file.reference.jfreechart-1.0.19-experimental.jar=lib\\jfreechart-1.0.19-experimental.jar
 file.reference.jfreechart-1.0.19-swt.jar=lib\\jfreechart-1.0.19-swt.jar
 file.reference.jfreechart-1.0.19.jar=lib\\jfreechart-1.0.19.jar
-file.reference.jfreechart-1.0.19.zip=lib\\jfreechart-1.0.19.zip
 file.reference.jfreesvg-2.0.jar=lib\\jfreesvg-2.0.jar
 file.reference.junit-4.11.jar=lib\\junit-4.11.jar
 file.reference.log4j-1.2.17.jar=lib\\log4j-1.2.17.jar
@@ -57,7 +56,6 @@ file.reference.looksdemo-2.3.1.jar=lib\\looksdemo-2.3.1.jar
 file.reference.orsoncharts-1.4-eval-nofx.jar=lib\\orsoncharts-1.4-eval-nofx.jar
 file.reference.orsonpdf-1.6-eval.jar=lib\\orsonpdf-1.6-eval.jar
 file.reference.postgresql-9.4.1209.jar-1=lib\\postgresql-9.4.1209.jar
-file.reference.servlet.jar=lib\\servlet.jar
 file.reference.swtgraphics2d.jar=lib\\swtgraphics2d.jar
 includes=**
 jar.compress=false
@@ -77,20 +75,18 @@ javac.classpath=\
     ${file.reference.postgresql-9.4.1209.jar-1}:\
     ${file.reference.log4j-1.2.17.jar}:\
     ${file.reference.DateChooser.jar}:\
-    ${file.reference.jfreechart-1.0.19.jar}:\
+    ${libs.JCalendar_1.4.classpath}:\
+    ${file.reference.jcalendar-1.4.jar}:\
     ${file.reference.hamcrest-core-1.3.jar}:\
     ${file.reference.jcommon-1.0.23.jar}:\
     ${file.reference.jfreechart-1.0.19-experimental.jar}:\
     ${file.reference.jfreechart-1.0.19-swt.jar}:\
+    ${file.reference.jfreechart-1.0.19.jar}:\
     ${file.reference.jfreesvg-2.0.jar}:\
     ${file.reference.junit-4.11.jar}:\
     ${file.reference.orsoncharts-1.4-eval-nofx.jar}:\
     ${file.reference.orsonpdf-1.6-eval.jar}:\
-    ${file.reference.servlet.jar}:\
-    ${file.reference.swtgraphics2d.jar}:\
-    ${file.reference.jfreechart-1.0.19.zip}:\
-    ${libs.JCalendar_1.4.classpath}:\
-    ${file.reference.jcalendar-1.4.jar}
+    ${file.reference.swtgraphics2d.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
