--- a/Hotel/nbproject/project.properties
+++ b/Hotel/nbproject/project.properties
@@ -34,6 +34,7 @@ dist.jar=${dist.dir}/Hotel.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.activation-1.1.1.jar=lib\\activation-1.1.1.jar
 file.reference.commons-beanutils-1.8.2.jar=lib\\commons-beanutils-1.8.2.jar
 file.reference.commons-collections-3.2.1.jar=lib\\commons-collections-3.2.1.jar
 file.reference.commons-digester-2.1.jar=lib\\commons-digester-2.1.jar
@@ -53,6 +54,7 @@ file.reference.jfreesvg-2.0.jar=lib\\jfreesvg-2.0.jar
 file.reference.junit-4.11.jar=lib\\junit-4.11.jar
 file.reference.log4j-1.2.17.jar=lib\\log4j-1.2.17.jar
 file.reference.looksdemo-2.3.1.jar=lib\\looksdemo-2.3.1.jar
+file.reference.mail-1.4.1.jar=lib\\mail-1.4.1.jar
 file.reference.orsoncharts-1.4-eval-nofx.jar=lib\\orsoncharts-1.4-eval-nofx.jar
 file.reference.orsonpdf-1.6-eval.jar=lib\\orsonpdf-1.6-eval.jar
 file.reference.postgresql-9.4.1209.jar-1=lib\\postgresql-9.4.1209.jar
@@ -86,7 +88,9 @@ javac.classpath=\
     ${file.reference.junit-4.11.jar}:\
     ${file.reference.orsoncharts-1.4-eval-nofx.jar}:\
     ${file.reference.orsonpdf-1.6-eval.jar}:\
-    ${file.reference.swtgraphics2d.jar}
+    ${file.reference.swtgraphics2d.jar}:\
+    ${file.reference.activation-1.1.1.jar}:\
+    ${file.reference.mail-1.4.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
