--- a/Hotel/nbproject/project.properties
+++ b/Hotel/nbproject/project.properties
@@ -42,8 +42,11 @@ file.reference.commons-logging-1.1.jar=lib\\commons-logging-1.1.jar
 file.reference.DateChooser.jar=lib\\DateChooser.jar
 file.reference.groovy-all-2.0.1.jar=lib\\groovy-all-2.0.1.jar
 file.reference.hamcrest-core-1.3.jar=lib\\hamcrest-core-1.3.jar
+file.reference.httpclient-4.5.6.jar=lib\\httpclient-4.5.6.jar
+file.reference.httpcore-4.3.3.jar=lib\\httpcore-4.3.3.jar
 file.reference.iText-2.1.7.js2.jar=lib\\iText-2.1.7.js2.jar
 file.reference.jasperreports-5.6.0.jar=lib\\jasperreports-5.6.0.jar
+file.reference.javax.json-1.0.jar=lib\\javax.json-1.0.jar
 file.reference.javax.servlet.jar=lib\\javax.servlet.jar
 file.reference.jcalendar-1.4.jar=lib\\jcalendar-1.4.jar
 file.reference.jcommon-1.0.23.jar=lib\\jcommon-1.0.23.jar
@@ -90,7 +93,10 @@ javac.classpath=\
     ${file.reference.orsonpdf-1.6-eval.jar}:\
     ${file.reference.swtgraphics2d.jar}:\
     ${file.reference.activation-1.1.1.jar}:\
-    ${file.reference.mail-1.4.1.jar}
+    ${file.reference.mail-1.4.1.jar}:\
+    ${file.reference.javax.json-1.0.jar}:\
+    ${file.reference.httpclient-4.5.6.jar}:\
+    ${file.reference.httpcore-4.3.3.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
