--- a/Hotel/nbproject/project.properties
+++ b/Hotel/nbproject/project.properties
@@ -38,6 +38,7 @@ file.reference.activation-1.1.1.jar=lib\\activation-1.1.1.jar
 file.reference.commons-beanutils-1.8.2.jar=lib\\commons-beanutils-1.8.2.jar
 file.reference.commons-collections-3.2.1.jar=lib\\commons-collections-3.2.1.jar
 file.reference.commons-digester-2.1.jar=lib\\commons-digester-2.1.jar
+file.reference.commons-io-1.3.2.jar=lib\\commons-io-1.3.2.jar
 file.reference.commons-logging-1.1.jar=lib\\commons-logging-1.1.jar
 file.reference.DateChooser.jar=lib\\DateChooser.jar
 file.reference.groovy-all-2.0.1.jar=lib\\groovy-all-2.0.1.jar
@@ -96,7 +97,8 @@ javac.classpath=\
     ${file.reference.mail-1.4.1.jar}:\
     ${file.reference.javax.json-1.0.jar}:\
     ${file.reference.httpclient-4.5.6.jar}:\
-    ${file.reference.httpcore-4.3.3.jar}
+    ${file.reference.httpcore-4.3.3.jar}:\
+    ${file.reference.commons-io-1.3.2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
