--- a/Hotel/nbproject/project.properties
+++ b/Hotel/nbproject/project.properties
@@ -47,6 +47,7 @@ file.reference.httpclient-4.5.6.jar=lib\\httpclient-4.5.6.jar
 file.reference.httpcore-4.3.3.jar=lib\\httpcore-4.3.3.jar
 file.reference.iText-2.1.7.js2.jar=lib\\iText-2.1.7.js2.jar
 file.reference.jasperreports-5.6.0.jar=lib\\jasperreports-5.6.0.jar
+file.reference.jasypt-1.9.0.jar=lib\\jasypt-1.9.0.jar
 file.reference.javax.json-1.0.jar=lib\\javax.json-1.0.jar
 file.reference.javax.servlet.jar=lib\\javax.servlet.jar
 file.reference.jcalendar-1.4.jar=lib\\jcalendar-1.4.jar
@@ -98,7 +99,8 @@ javac.classpath=\
     ${file.reference.javax.json-1.0.jar}:\
     ${file.reference.httpclient-4.5.6.jar}:\
     ${file.reference.httpcore-4.3.3.jar}:\
-    ${file.reference.commons-io-1.3.2.jar}
+    ${file.reference.commons-io-1.3.2.jar}:\
+    ${file.reference.jasypt-1.9.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
